hphp/test/zend/good/tests/output/bug60321.php.noserver
Used banned symbol ob_get_status
