hphp/test/zend/bad/ext/gmp/tests/bug67917.php.noserver
Used banned symbol memory_get_usage
